welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:16: error: type mismatch;
 found   : Unit
 required: Boolean
      if (!isAsleep && !isMom && !isMorning){
      ^